fix #871 component visible overlap with SplitPanel's

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-splitpanel.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-splitpanel.css
@@ -26,6 +26,7 @@
 .dui-split-layout-splitter,
 .dui-split-panel {
     position: relative;
+    overflow: hidden;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
